Fixing autogrow to only look for visible printable characters. Also fixing bouncing of autocomplete by absolutely positioning it.

--- a/public/stylesheets/pages/workspace.css
+++ b/public/stylesheets/pages/workspace.css
@@ -135,6 +135,7 @@ label {
   }
 
 .ui-autocomplete {
+  position: absolute;
   border: 1px solid #C0C0C0;
   background-color: #F6F6F6;
   cursor: pointer;
